--- a/python-flask/Containerfile
+++ b/python-flask/Containerfile
@@ -1,4 +1,10 @@
-FROM python:3.12-alpine
+# Use an official Python runtime as a parent image
+ARG PYTHON_VERSION=3.12.5-slim
+FROM python:${PYTHON_VERSION}
+
+# Set environment variables to prevent Python from writing pyc files to disc and buffer output
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1
 
 # Create app directory
 WORKDIR /app
