--- a/python-gradio/Containerfile
+++ b/python-gradio/Containerfile
@@ -34,7 +34,7 @@ EXPOSE 7860
 RUN cat <<EOF > /tmp/gradio_cmd.sh
 export GRADIO_ROOT_PATH=\$CL_APP_PATH
 export GRADIO_SERVER_NAME=0.0.0.0
-python \$APP_FILE
+python \$app_file
 EOF
 
 CMD ["bash", "-x", "/tmp/gradio_cmd.sh"]
